tests/bad/invalid_dot_shorthand.oc
/// fail: Cannot use dot shorthand outside of a method


def main() {
    let x = .width
}